Fixed white space

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ html {
     scroll-behavior: smooth;
 }
 
+#wrapper {
+    height: 500px;
+}
 
 .cookie1 {
     width: 300px;
